--- a/cluster/manifests/argo/overlays/local-cluster/kustomization.yaml
+++ b/cluster/manifests/argo/overlays/local-cluster/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 
-bases:
-- ../../manifests/argo/overlays/local-cluster
+resources:
+- namespace.yaml
+- gitops-subscription.yaml
