--- a/cluster/manifests/rhacm/base/kustomization.yaml
+++ b/cluster/manifests/rhacm/base/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-
 resources:
 - namespace.yaml
-- gitops-subscription.yaml
+- namespace-ocm.yaml
+- rhacm-subscription.yaml
+- rhacm-og.yaml
