--- a/cluster/manifests/rhacm/base/rhacm-og.yaml
+++ b/cluster/manifests/rhacm/base/rhacm-og.yaml
@@ -3,7 +3,7 @@ kind: OperatorGroup
 metadata:
   annotations:
     olm.providedAPIs: >-
-      Application.v1beta1.app.k8s.io,Channel.v1.apps.open-cluster-management.io,Deployable.v1.apps.open-cluster-management.io,GitOpsCluster.v1alpha1.apps.open-cluster-management.io,GitOpsCluster.v1beta1.apps.open-cluster-management.io,HelmRelease.v1.apps.open-cluster-management.io,MultiClusterHub.v1.operator.open-cluster-management.io,MultiClusterObservability.v1beta1.observability.open-cluster-management.io,MultiClusterObservability.v1beta2.observability.open-cluster-management.io,ObservabilityAddon.v1beta1.observability.open-cluster-management.io,Observatorium.v1alpha1.core.observatorium.io,PlacementRule.v1.apps.open-cluster-management.io,SubmarinerConfig.v1alpha1.submarineraddon.open-cluster-management.io,SubmarinerDiagnoseConfig.v1alpha1.submarineraddon.open-cluster-management.io,Subscription.v1.apps.open-cluster-management.io,SubscriptionReport.v1alpha1.apps.open-cluster-management.io,SubscriptionStatus.v1alpha1.apps.open-cluster-management.io
+      MultiClusterHub.v1.operator.open-cluster-management.io,MultiClusterObservability.v1beta1.observability.open-cluster-management.io,MultiClusterObservability.v1beta2.observability.open-cluster-management.io,ObservabilityAddon.v1beta1.observability.open-cluster-management.io,Observatorium.v1alpha1.core.observatorium.io,SubmarinerConfig.v1alpha1.submarineraddon.open-cluster-management.io,SubmarinerDiagnoseConfig.v1alpha1.submarineraddon.open-cluster-management.io
   name: open-cluster-management-twtw1
   namespace: open-cluster-management
 spec:
