--- a/cluster/manifests/rhacm/overlays/local-cluster/rhacm-mcm.yaml
+++ b/cluster/manifests/rhacm/overlays/local-cluster/rhacm-mcm.yaml
@@ -10,13 +10,29 @@ metadata:
 spec:
   availabilityConfig: Basic
   enableClusterBackup: false
-  ingress:
-    sslCiphers:
-      - ECDHE-ECDSA-AES256-GCM-SHA384
-      - ECDHE-RSA-AES256-GCM-SHA384
-      - ECDHE-ECDSA-AES128-GCM-SHA256
-      - ECDHE-RSA-AES128-GCM-SHA256
   overrides:
+    components:
+      - enabled: true
+        name: multiclusterhub-repo
+      - enabled: true
+        name: search
+      - enabled: true
+        name: console
+      - enabled: true
+        name: insights
+      - enabled: true
+        name: grc
+      - enabled: true
+        name: cluster-lifecycle
+      - enabled: true
+        name: volsync
+      - enabled: true
+        name: multicluster-engine
+      - enabled: false
+        name: cluster-proxy-addon
+      - enabled: false
+        name: cluster-backup
+    overrides:
     components:
       - enabled: true
         name: multiclusterhub-repo
