Add machineconfig example

--- a/cluster/aggregates/local-cluster/kustomization.yaml
+++ b/cluster/aggregates/local-cluster/kustomization.yaml
@@ -6,3 +6,5 @@ bases:
 - ../../manifests/argocd/base
 - ../../manifests/rhacm/base
 - ../../manifests/rhacm/overlays/local-cluster
+- ../../manifests/machineconfigs/base
+- ../../manifests/webterminal/base
